network/vpc.tf
resource "aws_vpc" "myvpc" {
  cidr_block = var.cidr

  tags = {
    Name="myvpc"
 }
}
